fix: font color on safari

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ input:focus {
 
 button {
     background-color: #ffffff;
+    color: black;
     text-transform: uppercase;
     cursor: pointer;
     transition: background-color 0.3s, color 0.2s, border-color 0.2s;
